[package]
name = "sklookup-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = "0.1"
sklookup-test-common = { path = "../sklookup-test-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["full"] }

[[bin]]
name = "sklookup-test"
path = "src/main.rs"
